# TaskForge-Multi-Tenant-SaaS-Backend-Platform

./: .gitignore  AGENTS.md  ARCHITECTURE.md  FUTURE_UPDATES.md  LEARNING_JOURNAL.md  Project_Meaning.md  Project_Metrices.md  Project_phase.md  README.md  phase1_implementation_plan.md  phase2_implementation_plan.md  phase3_implementation_plan.md  phase4_implementation_plan.md
.github/workflows/: ci.yml
LEARNING_JOURNAL/: LEARNING_JOURNAL.md  PHASE 0 -SCHEMA.md  PHASE 1 - RLS.md  PHASE 1 - Springboot Filter  PHASE 1 - entity_layer.md  PHASE 1 -Spring security,Filter.md  PHASE 1- Tenant Isolation.md  PHASE 2 - JWT Mental Model.md  Possible_error.md
ai-service/: .env.example  Dockerfile  main.py  pyproject.toml
backend/: Dockerfile  pom.xml
backend/src/main/java/com/taskforge/: TaskForgeApplication.java
backend/src/main/resources/: application.yml
backend/src/main/resources/db/migration/: .gitkeep  V1__create_tenants_and_users.sql  V1__smoke_test.sql  V2__create_projects_and_tasks.sql  V3__create_billing.sql  V4__create_auth_and_keys.sql  V5__create_audit_and_notifications.sql  V6__create_ai_tables.sql  V7__enable_rls.sql  V8__add_task_fts.sql
backend/src/test/resources/: application-test.yml
docs/: AUDIT_POLICY.md  PHASE2_METRICS.md  RATE_LIMITS.md  RBAC.md  RLS_PROOF.md  TEST_PROOF.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/pages/: LandingPage.tsx
infra/: .env.example  docker-compose.yml  init-db.sql
(+87 files in other folders)
